fix appearance on Safari

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background: #ccc;
     font-family: Arial, "文泉驛正黑", "WenQuanYi Zen Hei", "儷黑 Pro", "LiHei Pro", "微軟正黑體", "Microsoft JhengHei", "標楷體", DFKai-SB, sans-serif;
     background: url("https://source.unsplash.com/collection/148982/1920x1080");
+    background-size: cover;
     overflow: hidden;
 }
 #mainContent {
@@ -45,6 +46,7 @@ body {
     text-shadow: 0 0 0 rgba(255,255,255,0.6);/*用陰影設定文字的顏色*/
     -webkit-text-fill-color: transparent;
     background-color: transparent;
+    -webkit-appearance: none;
 }
 #search:focus {
     border: 0;
